--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,12 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.16.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
     implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
