--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,17 @@
 server:
   port: 8181
+  servlet:
+    context-path: "/"
 
 opensearch:
   uris: http://localhost:9200
   username: admin
   password: admin
+
+springdoc:
+  api-docs:
+    path: /api-docs
+    enabled: true
 
 logging:
   level:
